<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <com.markupartist.android.widget.ActionBar
        android:id="@+id/actionBar1"
        style="@style/ActionBar" >
    </com.markupartist.android.widget.ActionBar>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:text="@string/share_using"
                android:textColor="#000" />

            <Spinner
                android:id="@+id/shareTypeSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:prompt="@string/choose_app" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="top|left"
                android:hint="@string/message_hint"
                android:inputType="textMultiLine"
                android:lines="4"
                android:nextFocusLeft="@+id/editText1"
                android:nextFocusUp="@+id/editText1" />

            <TextView
                android:id="@+id/charsLeftTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/share_now" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>