<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.markupartist.android.widget.ActionBar
        android:id="@+id/actionBar1"
        style="@style/ActionBar" >
    </com.markupartist.android.widget.ActionBar>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#000" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#000"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <LinearLayout
                    android:id="@+id/SessionButtonLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/homescreen_icon_button"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp" >

                    <ImageView
                        android:id="@+id/sessionButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/homescreen_icon_button"
                        android:src="@drawable/agenda_button" />

                    <TextView
                        android:id="@+id/sessionTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agenda"
                        android:textColor="#fff"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tweetsButtonLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/homescreen_icon_button"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp" >

                    <ImageView
                        android:id="@+id/tweetsButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/homescreen_icon_button"
                        android:src="@drawable/tweet_icon" />

                    <TextView
                        android:id="@+id/tweetsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tweets"
                        android:textColor="#fff" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center" >

                <LinearLayout
                    android:id="@+id/BCBTwitterUpdatesButtonLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/homescreen_icon_button"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp" >

                    <ImageView
                        android:id="@+id/BCBUpdatesButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/homescreen_icon_button"
                        android:src="@drawable/update_icon" />

                    <TextView
                        android:id="@+id/updatesTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/updates"
                        android:textColor="#fff" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/MapsButtonLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/homescreen_icon_button"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp" >

                    <ImageView
                        android:id="@+id/mapsButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/homescreen_icon_button"
                        android:src="@drawable/venue_icon" />

                    <TextView
                        android:id="@+id/mapTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/venue"
                        android:textColor="#fff" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center" >

                <LinearLayout
                    android:id="@+id/AboutButtonLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="175dp"
                    android:background="@drawable/homescreen_icon_button"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp" >

                    <ImageView
                        android:id="@+id/aboutButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/homescreen_icon_button"
                        android:src="@drawable/about_button" />

                    <TextView
                        android:id="@+id/aboutTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:textColor="#fff" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>